# redge

./: .gitignore  Cargo.toml  README.md
src/: device.rs  lib.rs  main.rs  secrets.rs  strava.rs  uploader.rs
