[package]
name = "redge"
version = "0.1.0"
authors = ["Alexis Lothoré <alexis.lothore@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-utils = "0.10.4"
clap = "2.33.3"
env_logger = "0.9.0"
log = "0.4.14"
reqwest = { version = "0.11.6", features = ["blocking", "json", "multipart"] }
rusb = "0.9.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.71"
url = "2.2.2"
